deploy/kubernetes/overlays/us-secondary/patches/disable-beat.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: untold-celery-beat
  namespace: untold
spec:
  replicas: 0
